--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 mythes-tr
 =========
 
-Türkçe Eşanlamlılar Sözlüğü (Turkish Thesaurus)
+mythes-tr, gönüllülerce yürütülen bir Türkçe Eşanlamlı Kelimeler Sözlüğü (Turkish Thesaurus) projesidir. Elektronik ortamda kullanılabilecek bir sözlük oluşturmayı amaçlar.
