--- a/README
+++ b/README
@@ -1,4 +1,6 @@
 mythes-tr
 =========
 
-mythes-tr, gönüllülerce yürütülen bir Türkçe Eşanlamlı Kelimeler Sözlüğü (Turkish Thesaurus) projesidir. Elektronik ortamda kullanılabilecek bir sözlük oluşturmayı amaçlar.
+mythes-tr, gönüllülerce yürütülen bir Türkçe Eşanlamlı Kelimeler Sözlüğü
+(Turkish Thesaurus) projesidir. Elektronik ortamda kullanılabilecek bir
+sözlük oluşturmayı amaçlar.
