--- a/veriler/README
+++ b/veriler/README
@@ -23,7 +23,7 @@ kelime-esanlamlisi.txt
 
 relations.txt ve viki_rels.txt dosyalarından yararlanılarak
 hazırlanmış bir eşanlamlılar sözlüğüdür. Kelime Eşanlamlısı
-yapısındadır. Sözlük biçimsel ve anlamsız olarak bazı hatalar
+yapısındadır. Sözlük biçimsel ve anlamsal olarak bazı hatalar
 barındırmaktadır. Bunlar elle düzeltilme aşamasındadır.
 
 Son Güncelleme: 29 Temmuz 2012
