--- a/README
+++ b/README
@@ -5,9 +5,17 @@ mythes-tr, gönüllülerce yürütülen bir Türkçe Eşanlamlı Kelimeler Sözl
 (Turkish Thesaurus) projesidir. Elektronik ortamda kullanılabilecek bir
 sözlük oluşturmayı amaçlar.
 
+Belgelendirme için projenin wiki sayfalarına bakabilirsiniz. Aşağıdaki
+bağlantılar projenin ilk zamanlarında belgelendirme yerine geçen
+günlük yazılarına aittir ve burada tamamen tarihi nedenlerle
+yer almaktadır:
+
 http://anilozbek.blogspot.com/2012/07/ozgur-ofis-yazlmlar-icin-turkce.html
 http://anilozbek.blogspot.com/2012/07/mythes-ile-esanlamllar-sozlugu.html
 http://anilozbek.blogspot.com/2012/07/turkce-esanlaml-kelimeler-sozlugune.html
 http://anilozbek.blogspot.com/2012/07/iki-kelimeden-elli-bin-dokuz-yuz-elli.html
+
+Aşağıda Türkçe eş anlamlı kelimeler sözlüğünün ilk halini iş başında
+görebilirsiniz:
 
 http://www.youtube.com/watch?v=Cv2Z6afjb7w
