kelime listesine dair bir istatistik ekle

--- a/veriler/README
+++ b/veriler/README
@@ -42,6 +42,41 @@ düzenlemeler ve kelime çıkarımları yapılması gerekebilir. Dosya
 eşanlamlılar sözlüğü boyunca değiştirileceği için dosyanın ilk
 haline kelime-listesi-ilk.txt dosyasından ulaşabilirsiniz.
 
+İlk harflere göre ortalama kelime sayısı aşağıdaki gibidir:
+
+a 7222
+b 6736
+c 1530
+ç 3008
+d 5431
+e 3278
+f 1782
+g 3954
+ğ 2
+h 3488
+ı 670
+i 3760
+j 128
+k 10023
+l 1088
+m 5253
+n 1455
+o 1548
+ö 1289
+p 2837
+q 5
+r 1192
+s 6661
+ş 1207
+t 6074
+u 1119
+ü 737
+v 1033
+w 7
+x 8
+y 4866
+z 1094
+
 Son Güncelleme: 29 Temmuz 2012
 Oluşturan: Anıl Özbek
 
