değişim listesini güncelle

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,3 +2,7 @@
 
     * İki kelimelik bir ilk sözlük oluşturuldu
 
+2012-07-30  Anıl Özbek  <ozbekanil@gmail.com>
+
+    * Sözlük dosyasına yaklaşık 50000 düzenlenmemiş veri eklendi
+
