teşekkürler, Sezai Yeniay ve Hakan Hamurcu'ya

--- a/THANKS
+++ b/THANKS
@@ -1,2 +1,8 @@
 Zeki Bildirici
 Günlük yazıları, Twitter girdileri, geri bildirimler ve gelecekteki tüm katkıları için
+
+Sezai Yeniay
+Türkçe'de Yakın ve Karşıt Anlamlılar Sözlüğü, Dil Yanlışları kitapları için
+
+Hakan Hamurcu
+Projeye yeni katkıcılar bulma konusundaki çabaları için
