--- a/README
+++ b/README
@@ -1,6 +1,8 @@
 mythes-tr
 =========
 
+![alt text](http://i.imgur.com/HfCf0Id.png)
+
 mythes-tr, gönüllülerce yürütülen bir Türkçe Eşanlamlı Kelimeler Sözlüğü
 (Turkish Thesaurus) projesidir. Elektronik ortamda kullanılabilecek bir
 sözlük oluşturmayı amaçlar.
